# notify_service

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test-client.html
.docker/: gunicorn.conf.py
app/: main.py
app/api/v1/: schemas.py
app/api/v1/routes/: health.py  publish.py  stream.py
app/auth/: base.py  jwt_backend.py
app/core/: config.py  security.py
app/services/: persistence.py  pubsub.py  push_offline.py  sse_manager.py
app/utils/: ids.py
dev_tools/: end_to_end_benchmark.py  publish_benchmark.py  requirements.txt  sse_benchmark.py  test-client.html
